--- a/react-instagram-link/package.json
+++ b/react-instagram-link/package.json
@@ -13,7 +13,8 @@
     "clipboard": "^2.0.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.25.1"
+    "react-router-dom": "^6.25.1",
+    "use-clipboard-copy": "^0.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
